# spelling-bee-solver

./: .env.template  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  generate.py  merriam.key  package-lock.json
.githooks/: pre-push
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  cleanup.md  feature_request.md
.github/workflows/: backend.yml  ci.yml  compose.yml  deploy-gcp.yml  docker.yml  gcp.yml  minikube.yml  mobile.yml  release.yml
architecture/: cloud.mmd  compose.mmd  docker.mmd  minikube.mmd  mobile.mmd  native.mmd
charts/gcp/: Chart.yaml  README.md  values.yaml
charts/gcp.bak/: Chart.yaml  values.yaml
charts/gcp.bak/templates/: backend-service.yaml  frontend-deployment.yaml
charts/gcp/templates/: backend-deployment.yaml  backend-service.yaml  frontend-config.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  managed-certificate.yaml
charts/minikube/: Chart.yaml  values.yaml
charts/minikube/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml
charts/sbs-server/: values.yaml
charts/sbs-server/templates/: backend-deployment.yaml  backend-service.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  service.yaml
infra/: sbs-cert.yaml  sbs-frontend-config.yaml  sbs-ingress.yaml
sbs-backend/: Cargo.toml  Dockerfile
sbs-backend/scripts/: setup_dictionary.sh
sbs-backend/src/: config.rs  error.rs  lib.rs  main.rs  solver.rs  validator.rs
sbs-ffi/: Cargo.toml
sbs-ffi/src/: lib.rs
sbs-frontend/: Dockerfile  nginx.conf  nginx.docker.conf  package-lock.json  package.json  vite.config.ts
sbs-frontend/src/: App.tsx  formats.test.ts  formats.ts  index.css
sbs-gui/: .dockerignore  .gitignore  Dockerfile  Dockerfile.cloud  build.gradle.kts  gradle.properties  index.html  nginx.conf.template  package-lock.json  package.json  settings.gradle.kts  vite.config.ts
sbs-gui/composeApp/: build.gradle.kts
sbs-gui/composeApp/src/commonMain/kotlin/: App.kt
sbs-gui/composeApp/src/desktopMain/kotlin/: main.kt
sbs-gui/composeApp/src/jsMain/kotlin/: main.kt
sbs-gui/composeApp/src/jsMain/resources/: index.html
sbs-gui/src/: index.css
sbs-mobile/: .gitignore  App.tsx  app.json  jest.setup.js  package-lock.json  package.json
sbs-mobile/__tests__/: App.test.tsx
sbs-mobile/__tests__/components/: LetterInput.test.tsx  MaxRepeats.test.tsx  ValidatorPicker.test.tsx
sbs-mobile/__tests__/services/: SbsSolver.test.ts  api.test.ts  validator.test.ts
sbs-mobile/__tests__/utils/: formats.test.ts
sbs-mobile/android/: settings.gradle
sbs-mobile/android/app/: build.gradle
sbs-mobile/android/app/src/main/jni/: CMakeLists.txt  sbs_jni.c
sbs-mobile/android/app/src/main/res/values/: strings.xml
sbs-mobile/ios/: Podfile
sbs-mobile/ios/SbsMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
sbs-mobile/ios/SbsMobile.xcodeproj/: project.pbxproj
sbs-mobile/ios/SbsMobile.xcodeproj/xcshareddata/xcschemes/: SbsMobile.xcscheme
sbs-mobile/src/components/: CaseSensitiveToggle.tsx  LengthLimits.tsx  LetterInput.tsx  MaxRepeats.tsx  ModeToggle.tsx  ResultsList.tsx  ValidatorPicker.tsx
sbs-mobile/src/native/: SbsSolver.ts
sbs-mobile/src/services/: api.ts  validator.ts
sbs-mobile/src/utils/: formats.ts
sbs-solver/: docker-compose.yml
sbs-solver/src/: config.rs  lib.rs  main.rs  solver.rs
scripts/: deploy_gcp.sh  deploy_k8s.sh  run_local.sh  setup_dictionary.sh
src/: config.rs  dictionary.rs  error.rs  lib.rs  main.rs  solver.rs
(+4 files in other folders)
