[package]
name = "sbs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Spelling Bee Solver Core Library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
log = "0.4"
clap = { version = "4.0", features = ["derive"] } # Added for CLI later

[dev-dependencies]
tempfile = "3.3"
