[package]
name = "sbs"
version = "0.5.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Spelling Bee Solver Core Library"

[features]
default = ["validator"]
validator = ["reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
# Service Dependencies
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.3"

# Define the library explicitly
[lib]
name = "sbs"
path = "src/lib.rs"

# Define the CLI binary
[[bin]]
name = "sbs"
path = "src/main.rs"

# Define the backend server binary
[[bin]]
name = "sbs-backend"
path = "src/bin/server.rs"
